2007-05-23  Murray Cumming  <murrayc@murrayc.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
	(recurse_folders_sync): Do not assume that the row instance is a 
	TnyFolderStore, because not all TnyFolders are TnyFolderStores. 
	This allows us to use this tree model with TnyMergeFolder.

2007-05-22  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-message.c: (camel_mime_message_set_subject):
	Check that the input char* is not the same as the existing char*, 
	so we do not delete the input before using the input. This happens 
	when get_subject() is given directly to set_subject without a g_strdup(), 
	for instance.

2007-05-22  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c:
	(camel_tcp_stream_ssl_class_init): Add a g_warning() to warn people
	about using this unsupported alternative to NSS.

2007-05-21  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c: (socket_connect): When calling
	the standard connect () function, use sizeof (struct sockaddr) instead
	of just passing an uninitialized socklen_t, so that this can actually
	succeed, instead of failing with an Invalid Argument errno.

2007-05-16  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-message.c: (camel_mime_message_set_subject):
	Prevent memory corruption. g_strstrip() does not return a newly
	allocated string. Also, camel_header_encode_string() doesn't seem to
	like being given NULL.

2007-05-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* Shaped up the Unit tests
	* Fixed a bunch of -Wall warnings
	* Fixed some of the Design By Contract clausules

2007-05-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added a couple of new signals on TnyAccountStore and TnyAccount

2007-05-21 Javier Fernandez Garcia-Boente <jfernandez@igalia.com>

	* Use 'what' string parameter of asyn status callback to knonw 
	what operaiton is being executed, in oder to decide if progress
	data is send back or not.a
