@@ -1,3 +1,10 @@
+2007-05-24  Murray Cumming  <murrayc@murrayc.com>
+
+	* libtinymail-maemo/tny-maemo-conic-device.c:
+	(tny_maemo_conic_device_get_iap): When running in scratchbox, 
+	make sure that this returns an instance for a more complete fake 
+	implementation.
+
 2007-05-23  Murray Cumming  <murrayc@murrayc.com>
 
 	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
